# SymfonyProfilerClient

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml
src/symfony_profiler_client/: __init__.py  __main__.py  analyzer.py  backtrace.py  cli.py  client.py  config.py  exceptions.py  formatting.py  parser.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_backtrace.py  test_config.py  test_parser.py
tests/fixtures/: db_panel_sample.html
